# quezer

./: .editorconfig  CMakeLists.txt  qml.cmake  readme.md
.github/workflows/: android.yml  linux.yml  macos.yml  wasm.yml  windows.yml
cmake/: AndroidOpenSSL.cmake
qml/: Album.qml  Footer.qml  Home.qml  Icon.qml  Login.qml  LoginPage.qml  Main.qml  Player.qml  PlayerFooter.qml  Sidebar.qml
res/android/res/drawable/: ic_launcher_foreground.xml
res/app/: app.rc  quezer.desktop  quezer.icns
scripts/: update_deps.py
src/: CMakeLists.txt  main.cpp
src/deezer/: CMakeLists.txt  apipage.hpp  apiresponse.cpp  apiresponse.hpp  blowfish.cpp  blowfish.hpp  cypher.cpp  cypher.hpp  deezerapi.cpp  deezerapi.hpp  deezerclient.cpp  deezerclient.hpp  deezergw.cpp  deezergw.hpp  gwapi.cpp  gwapi.hpp  mediaplayer.cpp  mediaplayer.hpp  userdata.cpp  userdata.hpp
src/deezer/api/: CMakeLists.txt  deezerapi.cpp  deezerapi.hpp  deezergw.cpp  deezergw.hpp  deezermedia.cpp  deezermedia.hpp  deezerpipe.cpp  deezerpipe.hpp  gwrequest.cpp  gwrequest.hpp
src/deezer/blowfish/: CMakeLists.txt  blowfish.cpp  blowfish.hpp  blowfishcbc.h  constants.hpp
src/deezer/enums/: explicitcontent.hpp  loginerror.hpp  mediaformat.hpp  searchmediatype.hpp  searchmode.hpp  searchorder.hpp
src/deezer/objects/: CMakeLists.txt  album.cpp  album.hpp  genre.cpp  genre.hpp  mediaurl.cpp  mediaurl.hpp  options.cpp  options.hpp  page.cpp  page.hpp  searchalbum.cpp  searchalbum.hpp  songdata.cpp  songdata.hpp  userdata.cpp  userdata.hpp
src/enums/: queueitemstatus.hpp
src/items/: CMakeLists.txt  sidebaritem.cpp  sidebaritem.hpp
src/models/: CMakeLists.txt  homepageitemmodel.cpp  homepageitemmodel.hpp  homepagemodel.cpp  homepagemodel.hpp  sidebarmodel.cpp  sidebarmodel.hpp
src/player/: CMakeLists.txt  mediaplayer.cpp  mediaplayer.hpp  metadata.cpp  metadata.hpp  queueitem.hpp
src/proxies/: CMakeLists.txt  homepageitemproxy.cpp  homepageitemproxy.hpp
src/qml/: CMakeLists.txt  deezerclient.cpp  deezerclient.hpp  imagepainteditem.cpp  imagepainteditem.hpp  loginpage.cpp  loginpage.hpp  pagefilteroption.cpp  pagefilteroption.hpp  pageitem.cpp  pageitem.hpp  playerpage.cpp  playerpage.hpp  settings.cpp  settings.hpp
src/util/: CMakeLists.txt  enumserializer.cpp  enumserializer.hpp  json.cpp  json.hpp
